Resolve some of requested changes